--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <a href="playstation52024.github.io">Home</a>
-    <a href="projects/helios">HeliOS</a>
+    <a href="index.html">Home</a>
+    <a href="projects/HeliOS">HeliOS</a>
   </body>
 </html>
