--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <a href="index.html">Home</a>
     <a href="projects/HeliOS">HeliOS</a>
+    <a href="reactos-builds">ReactOS Builds</a>
   </body>
 </html>
