--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <h1>Playstation52024</h1>
+    
     <a href="index.html">Home</a>
     <a href="projects/HeliOS">HeliOS</a>
     <a href="reactos-builds">ReactOS Builds</a>
+    <p>Hi. I am a guy who chose a really random username. I can code a little html, css, python, and can use Linux.</p>
+    <br>
+    <br>
+    <p>We will be updating our site soon from html to md! Hello, modern font!</p>
   </body>
 </html>
